--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-description = "JA3 TLS fingerprints working with Rustls types"
+description = "Extract JA3 TLS fingerprints from a slice bytes, working with Rustls types"
 edition = "2021"
-name = "rustls-ja3"
+name = "ja3-rustls"
 version = "0.0.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
