--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-description = "Extract JA3 TLS fingerprints from a slice bytes, working with Rustls types"
-edition = "2021"
 name = "ja3-rustls"
+description = "Extract JA3 TLS fingerprints from a slice bytes, working with Rustls types"
 version = "0.0.0"
+edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
