--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ja3-rustls"
-description = "Extract JA3 TLS fingerprints from a slice bytes, working with Rustls types"
-version = "0.0.1"
+description = "Extract JA3 TLS fingerprints from a slice of bytes, working with Rustls types"
+version = "0.0.2"
 edition = "2021"
 license = "MIT"
 
