--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ja3-rustls"
 description = "Extract JA3 TLS fingerprints from a slice of bytes, working with Rustls types"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 license = "MIT"
 
@@ -12,11 +12,13 @@ rustls = {version = "0.20", features = []}
 
 hex = {version = "0.4", optional = true}
 md-5 = {version = "0.10", optional = true}
+rand = {version = "0.8.5", optional = true}
 
 [features]
 # default = ["md5-string"]
 md5 = ["md-5"]
 md5-string = ["md-5", "hex"]
+rand = ["dep:rand"]
 
 [dev-dependencies]
 hex-literal = "0.3"
